2004-07-16  Laurent Belmonte  <laurent.belmonte@aliacom.fr>

	some re-indent :(

	svg remasterization by olivier (powered by inkscape)
	* pixmaps/layout_1_player.svg:
	* pixmaps/layout_2_players.svg:
	* pixmaps/layout_network_player.svg:
	* pixmaps/pane.svg:
	* src/monkey/board.c: (board_finalize), (board_new),
	* src/monkey/board.h:
	* src/monkey/monkey.c: (monkey_instance_init),
	* src/monkey/playground.c: (playground_new),
	* src/monkey/playground.h:
	* src/monkey/shooter.c: (shooter_new), (shooter_instance_init),
	* src/monkey/shooter.h:

2004-07-08  Laurent Belmonte  <laurent.belmonte@aliacom.fr>

	update contributors and mainwindow icon
	* src/ui/ui-main.c: (ui_main_new), (ui_main_finalize), (about):

2004-07-07  Laurent Belmonte  <laurent.belmonte@aliacom.fr>

	add observer notion so in the future users could spy game
	* src/net/game.c: (observer_disconnected), (add_observer),
	(notify_observers), (network_game_new),
	(network_game_instance_init), (remove_observer):
	* src/ui/game-network-player-manager.c: (state_changed),
	(start_timeout), (game_created_ok), (recv_xml_message):
	* src/ui/game-network-player.c: (recv_bubble_array):

2004-07-06  Laurent Belmonte  <laurent.belmonte@aliacom.fr>

	show other players bubbles color

	add DEBUG to enable debug message

	fix the network game background image
	
	* pixmaps/bubbles/Makefile.am:
	* pixmaps/bubbles/little_bubble.svg:
	* pixmaps/bubbles/little_bubble_01.svg:
	* pixmaps/bubbles/little_bubble_02.svg:
	* pixmaps/bubbles/little_bubble_03.svg:
	* pixmaps/bubbles/little_bubble_04.svg:
	* pixmaps/bubbles/little_bubble_05.svg:
	* pixmaps/bubbles/little_bubble_06.svg:
	* pixmaps/bubbles/little_bubble_07.svg:
	* pixmaps/bubbles/little_bubble_08.svg:
	* pixmaps/layout_network_player.svg:
	* src/net/game-manager.c: (client_request_start):
	* src/net/game.c: (bubble_sticked), (game_lost), (send_start):
	* src/net/message-handler.c: (network_message_handler_connect),