@@ -4,7 +4,10 @@ data/keybinding.glade
 data/monkey-bubble.glade
 data/monkey-bubble.schemas.in
 data/netgame.glade
+data/netserver.glade
 monkey-bubble.desktop.in
 src/ui/eggcellrendererkeys.c
 src/ui/keyboard-properties.c
 src/ui/ui-main.c
+src/ui/ui-network-server.c
+src/ui/ui-network-client.c
