@@ -616,7 +616,7 @@ static void about (gpointer    callback_data,
                                           PACKAGE,
                                           VERSION,
                                           "Copyright (C) 2003 - Laurent Belmonte <laurent.belmonte@aliacom.fr>",
-                                          "Monkey Bubble is an Arcade Game for the GNOME Desktop Environment. Simply remove all Bubbles by the creation of unicolor triplets.",
+                                          _("Monkey Bubble is an Arcade Game for the GNOME Desktop Environment. Simply remove all Bubbles by the creation of unicolor triplets."),
                                           authors,
                                           documenters,
                                           strcmp (translator_credits, "translator_credits") != 0 ? translator_credits : NULL,
